--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:14-alpine
 # Create app directory
-WORKDIR /usr/src/app/
+WORKDIR /usr/src/app/server
 
 # Install app dependencies
 # A wildcard is used to ensure both package.json AND package-lock.json are copied
