--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,16 +1,15 @@
-FROM node:14-alpine
-# Create app directory
+FROM node:16-alpine3.11 as builder
 WORKDIR /usr/src/app/client
+ENV PATH /usr/src/app/client/node_modules/.bin:$PATH
+COPY client/package.json ./
+COPY client/package-lock.json ./
+RUN npm ci --silent
+RUN npm install react-scripts@4.0.3 -g --silent
+COPY client/ ./
+RUN npm run build
 
-# Install app dependencies
-
-COPY client/ /usr/src/app/client/
-
-
-RUN npm install
-# If you are building your code for production
-# RUN npm ci --only=production
-
-EXPOSE 3000
-
-ENTRYPOINT ["react-scripts", "start"]
+# production environment
+FROM nginx:stable-alpine
+COPY --from=builder /usr/src/app/client/build /usr/share/nginx/html
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]   
