--- a/client/package.json
+++ b/client/package.json
@@ -45,5 +45,6 @@
     "@material-ui/pickers": "^3.3.10",
     "clsx": "^1.1.1",
     "prop-types": "^15.7.2"
-  }
+  },
+  "homepage": "/courses"
 }
